test/cases/compile_errors/stage1/obj/access_non-existent_member_of_error_set.zig
const Foo = error{A};
comptime {
    const z = Foo.Bar;
    _ = z;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:18: error: no error named 'Bar' in 'Foo'
